--- a/.env
+++ b/.env
@@ -5,4 +5,5 @@ VITE_STORAGE_BUCKET=el-libro-escarlata.firebasestorage.app
 VITE_MESSAGING_SENDER_ID=399923124576
 VITE_APP_ID=1:399923124576:web:d6c27db4c79916e8a32605
 VITE_MEASUREMENT_ID=G-7W7NMHHWM2
-
+HFTOKEN=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
+HFTOKEN2= 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
